# cubpackpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
examples/: CMakeLists.txt  simple_rectangle.cpp  simple_rectangle.out  simple_triangle.cpp  simple_triangle.out  so_many_triangles.cpp  so_many_triangles.out  timing_benchmark.cpp  timing_benchmark.out
examples/original/: CONTENTS  EXAMPLES  vb1.cpp  vb10.cpp  vb11.cpp  vb12.cpp  vb13.cpp  vb14.cpp  vb15.cpp  vb16.cpp  vb17.cpp  vb18.cpp  vb2.cpp  vb3.cpp  vb4.cpp  vb5.cpp  vb6.cpp  vb7.cpp  vb8.cpp  vb9.cpp
include/cubpackpp/: C2.h  C2dv2.h  C2dv4.h  C2interf.h  C2prc.h  C2rule13.h  C2toS2.h  C2togr.h  E2.h  E2adapt.h  E2interf.h  E2sec.h  E2secitf.h  E2secprc.h  E2tostrp.h  S2.h  S2adapt.h  S2interf.h  S2rule13.h  T2.h  T2dv4.h  T2interf.h  T2rule13.h  T2tops.h  atomic.h  atomic.tpp  atomreg.h  boolean.h  chrono.h  compreg.h  counter.h  cubpackpp.h  div.h  div.tpp  error.h  eval_ctr.h  function.h  geometry.h  gr.h  gritf.h  (+54 more)
src/: C2.cpp  C2dv2.cpp  C2dv4.cpp  C2interf.cpp  C2prc.cpp  C2rule13.cpp  C2toS2.cpp  C2togr.cpp  E2.cpp  E2adapt.cpp  E2interf.cpp  E2sec.cpp  E2secitf.cpp  E2secprc.cpp  E2tostrp.cpp  S2.cpp  S2adapt.cpp  S2interf.cpp  S2rule13.cpp  T2.cpp  T2dv4.cpp  T2interf.cpp  T2rule13.cpp  T2tops.cpp  atomreg.cpp  boolean.cpp  chrono.cpp  compreg.cpp  deccxxtp.cpp  eval_ctr.cpp  geometry.cpp  gnu262tp.cpp  gr.cpp  gritf.cpp  gs.cpp  gsitf.cpp  gsprc.cpp  integran.cpp  integrat.cpp  invert.cpp  (+19 more)
